@@ -1,6 +1,7 @@
 *.pyc
 *~
 __pycache__/
+/.version
 /MANIFEST
 /build/
 /dist/
