@@ -1,3 +1,4 @@
+include .version
 include CHANGES
 include LICENSE.txt
 include MANIFEST.in
@@ -13,7 +14,6 @@ include doc/html/*.js
 include doc/html/_static/*
 include doc/html/objects.inv
 include doc/icatdata*.xsd
-include icatinfo.py
 include tests/conftest.py
 include tests/data/summary*
 include tests/pytest.ini
