@@ -1,28 +1,0 @@
-"""A library for writing ICAT clients in Python.
-
-This package provides a collection of modules for writing Python
-programs that access an ICAT service using the SOAP interface.  It is
-based on Suds and extends it with ICAT specific features.
-"""
-
-#
-# Project properties
-#
-
-__author__    = "Rolf Krahl <rolf.krahl@helmholtz-berlin.de>"
-__copyright__ = """Copyright 2013-2018
-Helmholtz-Zentrum Berlin fuer Materialien und Energie GmbH
-
-Licensed under the Apache License, Version 2.0 (the "License"); you
-may not use this file except in compliance with the License.  You may
-obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
-implied.  See the License for the specific language governing
-permissions and limitations under the License.
-"""
-__version__   = "0.15.1"
