@@ -1,8 +1,0 @@
-
-#
-# Default import
-#
-
-from icat.client import *
-from icat.exception import *
-
