@@ -1,32 +1,87 @@
 #! /usr/bin/python
+"""Python interface to ICAT and IDS
 
-import sys
-import os.path
-from glob import glob
-from distutils.core import  Command, setup
+This package provides a collection of modules for writing Python
+programs that access an `ICAT`_ service using the SOAP interface.  It
+is based on Suds and extends it with ICAT specific features.
+
+.. _ICAT: http://www.icatproject.org/
+"""
+
+from __future__ import print_function
 try:
-    from distutils.command.build_py import build_py_2to3 as build_py
+    from distutils.command.build_py import build_py_2to3 as du_build_py
 except ImportError:
     # Python 2.x
-    from distutils.command.build_py import build_py
+    from distutils.command.build_py import build_py as du_build_py
+import distutils.command.sdist
+import distutils.core
+from distutils.core import setup
+import distutils.log
+from glob import glob
+import os
+import os.path
+import string
 try:
     import distutils_pytest
 except ImportError:
     pass
-import icatinfo
-import re
+try:
+    import setuptools_scm
+    version = setuptools_scm.get_version()
+    with open(".version", "wt") as f:
+        f.write(version)
+except ImportError:
+    try:
+        with open(".version", "rt") as f:
+            version = f.read()
+    except OSError:
+        distutils.log.warn("warning: cannot determine version number")
+        version = "UNKNOWN"
 
-DOCLINES         = icatinfo.__doc__.split("\n")
-DESCRIPTION      = DOCLINES[0]
-LONG_DESCRIPTION = "\n".join(DOCLINES[2:])
-VERSION          = icatinfo.__version__
-AUTHOR           = icatinfo.__author__
-URL              = "http://icatproject.org/user-documentation/python-icat/"
-m = re.match(r"^(.*?)\s*<(.*)>$", AUTHOR)
-(AUTHOR_NAME, AUTHOR_EMAIL) = m.groups() if m else (AUTHOR, None)
+doclines = __doc__.strip().split("\n")
 
 
-class build_test(Command):
+class init_py(distutils.core.Command):
+
+    description = "generate the main __init__.py file"
+    user_options = []
+    init_template = '''"""%s"""
+
+__version__ = "%s"
+
+#
+# Default import
+#
+
+from icat.client import *
+from icat.exception import *
+'''
+
+    def initialize_options(self):
+        self.package_dir = None
+
+    def finalize_options(self):
+        self.package_dir = {}
+        if self.distribution.package_dir:
+            for name, path in self.distribution.package_dir.items():
+                self.package_dir[name] = convert_path(path)
+
+    def run(self):
+        try:
+            pkgname = self.distribution.packages[0]
+        except IndexError:
+            distutils.log.warn("warning: no package defined")
+        else:
+            pkgdir = self.package_dir.get(pkgname, pkgname)
+            ver = self.distribution.get_version()
+            if not os.path.isdir(pkgdir):
+                os.mkdir(pkgdir)
+            with open(os.path.join(pkgdir, "__init__.py"), "wt") as f:
+                print(self.init_template % (__doc__, ver), file=f)
+
+
+class build_test(distutils.core.Command):
     """Copy all stuff needed for the tests (example scripts, test data)
     into the test directory.
     """
@@ -61,20 +116,35 @@ class build_test(Command):
             self.copy_file(src, dest, preserve_mode=False)
 
 
+class sdist(distutils.command.sdist.sdist):
+    def run(self):
+        self.run_command('init_py')
+        distutils.command.sdist.sdist.run(self)
+
+
+class build_py(du_build_py):
+    def run(self):
+        self.run_command('init_py')
+        du_build_py.run(self)
+
+
 setup(
     name = "python-icat",
-    version = VERSION,
-    description = DESCRIPTION,
-    long_description = LONG_DESCRIPTION,
-    author = AUTHOR_NAME,
-    author_email = AUTHOR_EMAIL,
-    url = URL,
+    version = version,
+    description = doclines[0],
+    long_description = "\n".join(doclines[2:]),
+    author = "Rolf Krahl",
+    author_email = "rolf.krahl@helmholtz-berlin.de",
+    url = "http://icatproject.org/user-documentation/python-icat/",
     license = "Apache-2.0",
     requires = ["suds"],
     packages = ["icat"],
     scripts = ["icatdump.py", "icatingest.py", "wipeicat.py"],
     classifiers = [
-        "Programming Language :: Python",
+        "Development Status :: 5 - Production/Stable",
+        "Intended Audience :: Developers",
+        "License :: OSI Approved :: Apache Software License",
+        "Operating System :: OS Independent",
         "Programming Language :: Python :: 2",
         "Programming Language :: Python :: 2.7",
         "Programming Language :: Python :: 3",
@@ -83,12 +153,13 @@ setup(
         "Programming Language :: Python :: 3.5",
         "Programming Language :: Python :: 3.6",
         "Programming Language :: Python :: 3.7",
-        "Development Status :: 5 - Production/Stable",
-        "Intended Audience :: Developers",
-        "License :: OSI Approved :: Apache Software License",
-        "Operating System :: OS Independent",
+        "Programming Language :: Python",
         "Topic :: Software Development :: Libraries :: Python Modules",
-        ],
-    cmdclass = {'build_py': build_py, 'build_test': build_test},
+    ],
+    cmdclass = {
+        'build_py': build_py,
+        'build_test': build_test,
+        'init_py': init_py,
+        'sdist': sdist,
+    },
 )
-
